Bug 250714 - Folder view not updated correctly after local subscription modification
Summary: Folder view not updated correctly after local subscription modification
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-09 23:50 UTC by Sabine Faure
Modified: 2010-12-23 23:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-09 23:50:37 UTC
Version:           unspecified (using Devel) 
OS:                Linux

After the user has modified the local subscription the changes should be displayed in the folder view but atm it is not the case.

Reproducible: Always

Steps to Reproduce:
Prerequisite: having an Imap resource containing shared folders.

- Launch Kmail-mobile
- Select your Imap Account
- Open the 'Actions' tab
- Click on 'Account'
- Click on 'Manage Local Subscriptions...'
- Uncheck two subfolders of the Imap account (ex: shared.mailing-lists and shared builds)
- Click on 'Ok'

Actual Results:  
In the folder view you can still see the two folders that you have unsuscribed from.

Expected Results:  
The folders that have been unchecked in the Local subscription dialogue should not be displayed anymore in the folder view.

The folder view not updating could be linked to bug #250070 (Imap refuses to sync after modifying subscription) so I suggest that you wait until that one is fixed before fixing that one.


N900, 4:4.5~20100909.1173240-1maemo1.1173275
Comment 1 Sabine Faure 2010-09-23 15:02:46 UTC
I retested this today and this still does not work properly:

The only difference in the result being that instead of the folder names appearing in folder View eventhough the local subscription has been modified, there is  a 'Loading...' in the Folder View where the folder names used to be that stays there indefinitely even after a Kmail-mobile quit and restart.

So I am modifying this bug's title from 'Folder view not updated after local subscription modification' to 'Folder view not updated correctly after local subscription modification.

N900, 4:4.5~20100922.1178352-1maemo1.1177763
Comment 2 Bjoern Ricks 2010-09-28 12:20:30 UTC
Can confirm this issue
Comment 3 Kevin Ottens 2010-09-28 15:13:05 UTC
SVN commit 1180657 by ervin:

Make the mobile apps honor the local subscription settings.

BUG: 250714


 M  +1 -0      kdeclarativemainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180657
Comment 4 Sabine Faure 2010-09-30 00:02:56 UTC
It is corrected now.

The unchecked folders in the 'Local subscriptions' dialogue are not
displayed anymore in the folder view so this bug is corrected now.

Note: the Imap not syncing after modifying the local subscription remains (see bug #252273 for details)

N900, 4:4.5~20100929.1180953-1maemo1.1180919
Comment 5 Sabine Faure 2010-12-23 23:58:18 UTC
I retested this bug today and it still works fine.

The folders that have been unchecked in the Local subscription dialogue are not displayed anymore in the folder view.

N900, 4:4.6~.20101223.2034.git9cc0c3e-1maemo1.120883