Make the mobile apps honor the local subscription settings.

BUG: 250714

svn path=/trunk/KDE/kdepim/mobile/; revision=1180657